app/styles/app.styl
@require '/node_modules/fluidity/lib/fluidity.styl'
@require 'variables.styl'
@require 'mixins.styl'
@require 'functions.styl'

*
  box-sizing border-box
  text-rendering optimizeLegibility

html, body
  height 100%
  -webkit-user-select none

body
  overflow hidden
  margin 0
  padding 0
  font-family 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
  display flex
  flex-direction column
  align-items stretch
  align-content stretch
  
input[type='file']
  display none

.titlebar
  -webkit-app-region drag
  padding 4px 16px
  toolbar $foreground, $background
  flex 0 0 30px
  
  .menubar, .window-controls
    -webkit-app-region no-drag
    
  .app-name
    margin-right 10px
    padding-right 10px
    border-right 1px solid $foreground
    font-size 12px
    
  .window-controls
    position absolute
    top 0
    right 0
    display flex
    align-content stretch
    align-items baseline
    padding 0 4px
    
    a
      width 40px
      margin-left 1px
      font-family monospace
      font-size 18px
      font-weight bold
      text-align center
      background mix($background, #888, 65%)
      color mix($foreground, #888, 90%)
      transition opacity .3s ease
      opacity .8
      cursor default
      
      &:hover
        opacity 1
        color $foreground
        
      &:nth-child(2)
      
        div
          transition -webkit-transform .5s ease
          transform rotate(0deg)
          
        &.maximized div
          transform rotate(180deg)
      
      &:last-child
        background $accent
        color $foreground
        
.holder
  display flex
  flex-grow 1
  align-items stretch
  align-content stretch
  flex-flow row
  
  .project
    background linear-gradient(to right, mix($background, $foreground, 85%), mix($background, $foreground, 80%))
    color mix($foreground, $background, 80%)
    overflow-y auto
    overflow-x hidden
    width 200px
    transition width .3s ease
    font-size 11px
    display block
    flex-shrink 0
    
    &.collapsed
      width 0
      
    .tree
      list-style-type none
      margin 0
      white-space nowrap
      padding-left 7px
      display none
      
      &.expanded
      &.root
        display block
        
      &.root > li > span
        color $foreground
        font-weight bold
        font-size 12px
        
      &.expanded
        border-left 1px solid rgba(mix($foreground, $background, 40%), .6)
      
      .file
        color $foreground
        padding-left 6px
        cursor pointer
      
      .directory
        cursor pointer
        
        .expander
          display inline-block
          position relative
          left -3px
          transform rotate(0deg)
          transition -webkit-transform .3s ease
          
          &.expanded
            transform rotate(90deg)
        
      span
        width 100%
        display inline-block
        
        &:hover
          background mix($foreground, $background, 25%)
  
  .container
    display flex
    flex-grow 1
    flex-flow column
    align-items stretch
    align-content stretch
  
    #editor
      display flex
      flex 1 0 auto
      flex-flow column
    
    .tabs
      display flex
      flex 0 0 30px
      justify-content flex-start
      padding 2px 2px 0 0
      background linear-gradient(to bottom, mix($background, #888, 80%), mix($background, #888, 50%))
      
      .tab
        display flex
        justify-content space-between
        align-items stretch
        max-width 200px
        margin-right 3px
        border-radius 2px 2px 0 0
        padding 0
        flex 1 1 auto
        position relative
        color mix($foreground, $background, 70%)
        background linear-gradient(to bottom, mix($background, #888, 70%), mix($background, #888, 75%))
        font-size 12px
        vertical-align middle
        line-height 24px
        border-bottom solid 5px mix($background, #888, 75%)
        cursor default
        
        .label
          padding-left 6px
          white-space nowrap
          text-overflow ellipsis
          overflow hidden
        
        &.active
          border-bottom solid 5px $accent
          background linear-gradient(to bottom, mix($background, #888, 75%), mix($background, #888, 85%))
          color $foreground
          
          .status
            color $accent
        
        .status
          font-size 14px
          padding-right 4px
          margin-left 4px
          vertical-align middle
          align-self center
          text-align center
          width 18px
          position relative
          
          &:hover
            color $foreground
        
.bottom-bar
  margin 0
  padding 2px 5px
  flex 0 0 auto
  align-self flex-end
  width 100%
  display flex
  justify-content space-between
  align-content stretch
  box-shadow: 0 -4px 4px rgba(0,0,0,.1)
  toolbar $foreground, $background
  font-size 12px
  
  .toggle-holder
    display flex
    flex 0 1 auto
    flex-flow row
    
    .project-toggle
      display flex
      justify-content center
      font-weight bold
      transform rotate(0deg)
      transition -webkit-transform .3s ease
      
      &.expand
        transform rotate(180deg)
    
  .devTools
    display flex
    flex 1 0 auto
    justify-content center
    
    a
      cursor default
      padding-left 15px
    
  .selectors
    position absolute
    right 0
    bottom 0
    height 26px
    
    select
      margin-top 2px
      border none
      width 150px
      background $background
      color $foreground
      -webkit-appearance none
      height 22px
      padding 0
      border-radius 0
    
::-webkit-scrollbar
  width 15px
  height 15px

::-webkit-scrollbar-button
  width 0
  height 0

::-webkit-scrollbar-track
  background-color transparent

::-webkit-scrollbar-thumb
  background-color mix($foreground, $background, 30%)
  border 3px solid transparent
  border-radius 6px
  background-clip content-box
  
  &:hover
    background-color mix($foreground, $background, 35%)

::-webkit-scrollbar-corner
  background-color mix($foreground, $background, 15%)

